# ecu-firmware-release-tool

./: .gitignore  .gitleaks.toml  README.md  THIRD_PARTY_NOTICES.txt  pyproject.toml  release_toolchain.json  requirements-release.in
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-4-report.md  task-5-report.md
docs/releases/: 0.2.0.md
docs/specs/: 2026-04-26-unified-can-lin-host-tool-design.md
installer/: EcuReleaseTool.iss  check_running_processes.ps1
profiles/: as5pr_can_bootloader.yaml  e68_lin_bootloader.yaml
scripts/: bootstrap_release_tools.ps1  build_windows_installer.ps1  ecu-release.bat  release_build.py  release_signing.py
src/unified_can_lin_host_tool/: __init__.py  profile.py  tool_identity.py  trace.py  versioning.py
tests/: test_backend_contract.py  test_backend_settings.py  test_build_windows_installer.py  test_bus_session.py  test_can_isotp_transport.py  test_cancel.py  test_e68_crc32.py  test_errors.py  test_firmware_image.py  test_flash_cli.py  test_flash_workflow_fake.py  test_github_workflows.py  test_installer_contract.py  test_installer_process_guard.py  test_lin_diag_transport.py  test_profile.py  test_release_build.py  test_release_cli.py  test_release_signing.py  test_release_workspace.py  test_seedkey.py  test_tool_identity.py  test_trace.py  test_tsmaster_backend.py  test_tsmaster_virtual.py  test_ui_fake_backend.py  test_ui_main_window.py  test_ui_smoke.py  test_ui_threading.py  test_ui_worker_import.py  test_ui_workers.py  test_update_worker.py  test_usb2xxx_adapter.py  test_versioning.py
(+106 files in other folders)
