[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-can-lin-host-tool"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "cryptography>=42,<46"]

[project.scripts]
ecu-release = "unified_can_lin_host_tool.cli.release:main"
ecu-release-gui = "unified_can_lin_host_tool.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
